--- a/style.css
+++ b/style.css
@@ -72,5 +72,53 @@ h2 {
     font-weight: 700;
 }
 
-/* Sub Hero Section */
+/* Sub Hero Section - Projects and Layout */
+
+.project-container {
+    max-width: 98%;
+}
+
+.projects {
+    margin: 60px 0 60px 25px;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px;
+    font-weight:lighter;
+    border-bottom: 1px rgba(84, 78, 78, 0.2) solid;
+}
+
+img {
+    width: 300px;
+    height: auto;
+}
+
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between 20px;
+    row-gap: 20px;
+    column-gap: 25px;
+    margin-left: 35px;
+    margin-bottom: 40px;
+}
+
+/* Image Text */ 
+
+.image-container {
+    position:relative;
+    text-align: center;
+    color: white;
+}
+
+.image-text {
+    position:absolute;
+    top: 10px;
+    left: 10px;
+    background: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    letter-spacing: 1px;
+    padding: 10px;
+    margin: -10px 0 0 -10px;
+}
+
 
